--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+  border: 0px;
+  margin: 0px;
+}
 .title {
     text-align: center;
     color: whitesmoke;
@@ -9,11 +13,19 @@
     height: 50%;
     font-size: 1.5cm;
     font-family: Arial, Helvetica, sans-serif;
+
   }
   .instruction {
     text-align: center;
     color: black;
     font-size: 0.9cm;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .instructionVisual {
+    text-align: center;
+    color: rgb(78, 78, 78);
+    font-size: 0.6cm;
     font-family: Arial, Helvetica, sans-serif;
   }
 
@@ -24,18 +36,18 @@
     border-radius: 15px;
     background: rgb(130, 180, 220);
     padding: 20px;
-    width: 500px;
+    padding-bottom: 5%;
+    width: 600px;
     height: 250px;
     margin: auto;
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
   }
+
+
   .upload_inner {   
-    /*i.material-icons {  // Only if you're using material icons
-        display: inline-flex;
-        vertical-align: top;
-      }*/
+    
     text-align: center;
-    line-height: 150px;
+    line-height: 100px;
     vertical-align: middle;
     border-radius: 15px;
     background: rgb(75, 140, 190);
@@ -43,13 +55,25 @@
     font-size: 0.6cm;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
-    padding: 5px;
-    width: 250px;
-    height: 100px;
+    padding: 5%;
+    width: 350px;
+    height: 70px;
     margin: auto;
+    cursor: pointer;
     margin-top: 10%;
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
   }
+
+  .upload_inner:hover {   
+    /*i.material-icons {  // Only if you're using material icons
+        display: inline-flex;
+        vertical-align: top;
+      }*/
+ 
+    background: rgb(55, 120, 170);
+ 
+  }
+
 
   .invis_file {
     opacity: 0;
@@ -57,11 +81,66 @@
   }
   #file_chosen {
     text-align: center;
-    color: black;
-    font-size: 0.9cm;
+    color: rgb(230, 230, 230);
+    font-size: 0.6cm;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+  }
+
+  .uploadmsg {
+    text-align: center;
+    color: rgb(230, 230, 230);
+    font-size: 0.6cm;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
 
   }
+
+  .viewBtn {
+    text-align: center;
+    background-color: rgb(192, 192, 192);
+    color: rgb(139, 139, 139);
+
+    width: 300px;
+    display: block;
+    margin: auto;
+
+    text-align: center;
+    border-radius: 15px;
+    
+    font-size: 0.7cm;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+
+  .viewBtnTrue {
+    text-align: center;
+    background: rgb(75, 140, 190);
+    color: whitesmoke;
+
+    width: 300px;
+    display: block;
+    margin: auto;
+
+    text-align: center;
+    border-radius: 15px;
+
+    font-size: 0.7cm;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    cursor: pointer;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+    padding-top: 2%;
+    padding-bottom: 2%;
+  }
+
+  .viewBtnTrue:hover {
+    background: rgb(55, 120, 170);
+  }
+
 
 
   .visual_box {
@@ -81,7 +160,7 @@
     width: 50.5%;
     height: 45%;
     float: left;
-    margin-top: 5%;
+    margin-top: 2%;
     margin-left: 5%;
 
     
@@ -91,6 +170,7 @@
     float: left;
     margin-top: 5%;
     margin-right: 5%;
+
   
   }
   
@@ -118,62 +198,55 @@
     */
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
   }
-   /*
-  .button {
-    background-color: Crimson;  
-    border-radius: 5px;
-    color: white;
-    padding: .5em;
-    text-decoration: none;
-    cursor: pointer;
-    width: 100%;
-  }
 
-  .button-group {
-    display: block;
-  }
-  .btn-group .button:not(:last-child) {
-    border-bottom: none; 
-}
-  
-.btn-group .button:hover {
-  background-color: #3e8e41;
-}
 
-.button-group{
-    display: inline-block;
-    font-size: 0;
-    border: 2px solid darkgreen;
-    box-shadow: 5px 10px 18px rgb(55, 173, 39);
- }
- .button{
-    display: block;
-    width: 100%;
-    margin:5%;
-    border:none;
-    padding: 15px;
-    font-weight: bold;
-    font-size: 20px;
- }
- */
+   
  .button-group {
     display: flex;
     flex-direction: column;
     height: 100%;
     justify-content: space-around;
     width: 100%;
+    align-items: center;
     
   }
   .button {
+    padding: 8%;
+    align-items: center;
+    vertical-align: middle;
+    background: rgb(75, 140, 190);
+    color: whitesmoke;
+    height: 70px;
+    /*line-height: 60px;*/
+    width: 350px;
+    display: inline;
+    margin-bottom:10%;
+    margin-left:15%;
+    border-radius: 15px;
+    background: rgb(75, 140, 190);
+    font-size: 0.6cm;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    cursor: pointer;
+    text-align: center;
+    vertical-align: baseline;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+  }
+
+
+  .button:hover {
+    background: rgb(103, 164, 204);
+  }
+
+  .button_apply {
     text-align: center;
     background: rgb(75, 140, 190);
     color: whitesmoke;
-    height: 60px;
-    line-height: 60px;
-    width: 70%;
+    height: 50px;
+    line-height: 25px;
+    width: 40%;
     display: block;
-    margin:10%;
-    text-align: center;
+    margin-left: 30%;
     border-radius: 15px;
     background: rgb(75, 140, 190);
     font-size: 0.6cm;
@@ -181,29 +254,37 @@
     font-weight: 700;
     cursor: pointer;
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
-    padding: 5%;
+    padding: 2%;
   }
+  .color_select{
+    display: inline-block;
+  }
+
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
 }
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
+  background-color: #ffffff;
+  margin: 15% auto; 
+  padding: 30px;
   border: 1px solid #888;
-  width: 40%; /* Could be more or less, depending on screen size */
+  border-radius: 10px;
+  font-size: 0.6cm;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  width: 500px; 
 }
 
 /* The Close Button */
@@ -220,4 +301,34 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+#colorWeft {
+  display: inline-block;
+  margin-left: 10%;
+}
+#colorWarp {
+  display: inline-block;
+  margin-left: 5%;
+}
+
+.text{
+  display: inline-block;
+  color: rgb(39, 39, 39);
+}
+
+.intro {
+  width: 100%;
+  display: block;
+  font-size: 0.6cm;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: rgb(70, 80, 120);
   
+}
+  
+
+/* icons formatting
+#uploadicon {
+  display
+}
+*/
